[package]
name = "snapchat-log-parser"
authors = ["Felix422"]
version = "0.3.0"
edition = "2021"
description = "A simple crate to parse Snapchat chat logs"
license = "MIT"
keywords = ["snapchat"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.73"
chrono = "0.4.19"
lazy_static = "1.4.0"
serde_with = "1.11.0"

[dependencies.serde]
version = "1.0.132"
features = ["derive"]
